--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "git_user_id/git_repo_id",
+    "name": "andrewkonon/paycomet-php-client",
     "description": "",
     "keywords": [
         "swagger",
